--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,29 @@
 body{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     align-items: center;
+    background-image: url(backgrounds/home.png);
 }
 
 .mainbody{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
     padding-top: 10%;
 }
 
+.Name{
+    font-family: 'Roboto', sans-serif;
+}
+
 .Details{
-    justify-self: right;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-end;
+    text-align: right;
+    background-color:gainsboro;
+    padding: 50px;
+    border-radius: 10px;
 }
 
 .myphoto img{
@@ -18,10 +31,12 @@ body{
     height: 200px;
     object-fit: cover;
     border-radius: 50%;
+    padding-left: 80px;
 }
 
 .navbar{
-    background-color:cornsilk;
+    background-color:gainsboro;
+    border-radius: 10px;
     display: flex;
     justify-content: flex-end;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -29,9 +44,9 @@ body{
 
 .navbar a {
     float: none;
-    color:lightslategrey;
+    color:black;
     text-align: center;
-    padding: 14px 16px;
+    padding: 20px;
     text-decoration: none;
     font-size: 14px;
   }
