--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,16 @@ body{
     text-decoration: none;
     font-size: 14px;
   }
+
+  .navbar a:hover{
+      background-color:darkslategray;
+      color: floralwhite;
+  }
+
+.topname{
+    font-family: 'Reenie Beanie', sans-serif;
+    position: absolute;
+    top:25px;
+    left: 30px;
+    font-size: 25px;
+}
