--- a/contactstyles.css
+++ b/contactstyles.css
@@ -14,3 +14,15 @@ padding-top: 20px;
 form{
     padding:10px;
 }
+
+button{
+    background-color: lightyellow;
+    border: none;
+    padding: 10px;
+    font-size: 14px;
+    font-family: 'Quicksand', sans-serif;
+}
+
+button:hover{
+    background-color:slategrey;
+}
